Fixed from to on modal

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                     <div class="form-group">
                             <!-- <label for="formQuestion"><h3>From</h3></label> -->
                             <select class="form-control" id="inputTo">
-                                <option value="" selected="" disabled="">From </option>
+                                <option value="" selected="" disabled="">To </option>
                                 <option>Tina Turner</option>
                                 <option>Amy Winehouse</option>
                                 <option>Johnny Cash</option>
